--- a/Uppsala/Classes/Data_Mining/A1/A1_P1.ipynb
+++ b/Uppsala/Classes/Data_Mining/A1/A1_P1.ipynb
@@ -1022,59 +1022,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "id": "c5ea5334",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "species\n",
-       "Iris-setosa        76\n",
-       "Iris-virginica     62\n",
-       "Iris-versicolor    12\n",
-       "Name: count, dtype: int64"
+       "np.False_"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample=data.sample(n=150)\n",
-    "sample.value_counts(\"species\")"
+    "\n",
+    "sample=data.sample(n=150,random_state=46)\n",
+    "sample.value_counts(\"species\")\n",
+    "sample[\"id\"].duplicated().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "id": "8ca54ded",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "species\n",
-       "Iris-virginica     79\n",
-       "Iris-setosa        64\n",
-       "Iris-versicolor     7\n",
-       "Name: count, dtype: int64"
+       "np.True_"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample = data . sample ( n =150 , replace = True )\n",
-    "sample.value_counts(\"species\")"
+    "sample = data . sample ( n =150 , replace = True,random_state=867 )\n",
+    "sample.value_counts(\"species\")\n",
+    "sample[\"id\"].duplicated().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "id": "a3cd7635",
    "metadata": {},
    "outputs": [
@@ -1082,36 +1077,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_24864\\3415641282.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  sample=data.groupby('species',group_keys=False).apply(\n"
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_24864\\2448188461.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  sample=data.groupby('species',group_keys=False,).apply(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "species\n",
-       "Iris-virginica     1499\n",
-       "Iris-setosa        1498\n",
-       "Iris-versicolor     250\n",
-       "Name: count, dtype: int64"
+       "np.False_"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample=data.groupby('species',group_keys=False).apply(\n",
-    "    lambda x: x.sample(frac=0.5)\n",
+    "sample=data.groupby('species',group_keys=False,).apply(\n",
+    "    lambda x: x.sample(frac=0.5,random_state=42)\n",
     ")\n",
     "\n",
-    "sample.value_counts(\"species\")"
+    "sample.value_counts(\"species\")\n",
+    "sample[\"id\"].duplicated().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "id": "d0e59fa3",
    "metadata": {},
    "outputs": [
@@ -1119,31 +1111,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_24864\\372140361.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_24864\\2637115763.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  sample=data.groupby('species',group_keys=False).apply(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "species\n",
-       "Iris-setosa        50\n",
-       "Iris-versicolor    50\n",
-       "Iris-virginica     50\n",
-       "Name: count, dtype: int64"
+       "np.False_"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sample=data.groupby('species',group_keys=False).apply(\n",
-    "    lambda x:x.sample(50)\n",
+    "    lambda x:x.sample(50,random_state=86)\n",
     ")\n",
     "\n",
-    "sample.value_counts('species')"
+    "sample.value_counts('species')\n",
+    "sample[\"id\"].duplicated().any()"
    ]
   }
  ],
